2002-03-28  jacob berkman  <jacob@ximian.com>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf):
	fix a typo

Thu Mar 28 09:18:40 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-daemon.c: somehow the font settings were
	removed.  Re add.

2002-03-26  jacob berkman  <jacob@ximian.com>

	* gnome-settings-screensaver.[ch]
	(gnome_settings_screensaver_load): start xscreensaver, and display
	an error dialog if it failed

	* gnome-settings-daemon.c (gnome_settings_daemon_new): init/load
	screensaver

2002-03-25  jacob berkman  <jacob@ximian.com>

	* factory.c (main): tell the SM to restart us only after we know
	we're unique with bonobo-activation

2002-03-17  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-xsettings.c: Add keybindingtheme

2002-03-17  Kjartan Maraas  <kmaraas@gnome.org>

	* factory.c: Move include <config.h> to the top.
	
2002-03-13  jacob berkman  <jacob@ximian.com>

	* gnome-settings-daemon.c (_GnomeSettingsDaemonPrivate): add a
	dummy field
	(gnome_settings_daemon_register_callback): cast functions to
	gpointers as forte does not like this (bug #74349)

2002-03-07  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-settings-keyboard.c (apply_settings): Use correct GConf keys,
	click volume is of type float, not int

2002-03-10  Seth Nickell  <snickell@stanford.edu>

	* GNOME_SettingsDaemon.server.in:

	Dum de dum. Forgot to cvs add.

2002-03-10  Seth Nickell  <snickell@stanford.edu>

        Make the settings daemon a singleton BonoboObject so capplets
	can detect whether its running and activate it if its not.
	
	* Makefile.am:
	* factory.c: (main):
	* gnome-settings-daemon.c: (awake_impl), (finalize),
	(gnome_settings_daemon_class_init), (gnome_settings_daemon_init),
	(gnome_settings_daemon_new):
	* gnome-settings-daemon.h:

	Convert the settings-daemon into a BonoboObject and add code to
	register it with bonobo-activation. Still has a main loop that can
	be run normally to launch the settings daemon.
	