@@ -1,3 +1,12 @@
+2002-03-29  Jody Goldberg <jody@gnome.org>
+
+	* gnome-settings-accessibility-keyboard.c : make the debug spew optional
+	(set_server_from_gconf) : typo that only applied settings when we
+	  shouldn't.
+	(set_server_from_gconf) : set the mouse key accel flag when mk is
+	  enabled so that we can actually set the accel parms.  How did this
+	  work in X11R6 ?
+
 2002-03-28  jacob berkman  <jacob@ximian.com>
 
 	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf):
